--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "gatsby-plugin-sass": "^2.1.27",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1"
   },
   "repository": {
