--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.18.12",
+    "gatsby-plugin-styled-components": "^3.1.17",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-icons": "^3.8.0"
+    "react-icons": "^3.8.0",
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "gatsby-plugin-sass": "^2.1.27",
