--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.18.12",
     "gatsby-plugin-styled-components": "^3.1.17",
+    "gatsby-source-filesystem": "^2.1.46",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
