--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-sharp": "^2.3.13",
     "gatsby-plugin-styled-components": "^3.1.17",
+    "gatsby-plugin-transition-link": "^1.17.7",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.13",
+    "gsap": "^3.0.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
