--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.18.12",
     "gatsby-background-image": "^0.9.12",
+    "gatsby-cli": "^2.8.27",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-sharp": "^2.3.13",
     "gatsby-plugin-styled-components": "^3.1.17",
     "gatsby-plugin-transition-link": "^1.17.7",
+    "gatsby-source-contentful": "^2.1.77",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.13",
     "gsap": "^3.0.5",
