--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-background-image": "^0.9.12",
     "gatsby-cli": "^2.8.27",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-playground": "^1.0.6",
     "gatsby-plugin-sharp": "^2.3.13",
     "gatsby-plugin-styled-components": "^3.1.17",
     "gatsby-plugin-transition-link": "^1.17.7",
