--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-cli": "^2.8.27",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-playground": "^1.0.6",
+    "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.3.13",
     "gatsby-plugin-styled-components": "^3.1.17",
     "gatsby-plugin-transition-link": "^1.17.7",
@@ -31,6 +32,7 @@
     "gsap": "^3.0.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "styled-components": "^5.0.0"
   },
