--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-playground": "^1.0.6",
     "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.3.13",
+    "gatsby-plugin-sitemap": "^2.2.26",
     "gatsby-plugin-styled-components": "^3.1.17",
     "gatsby-plugin-transition-link": "^1.17.7",
     "gatsby-source-contentful": "^2.1.77",
